packages/style-macro/tests/fixtures/reject/computed-key.input.tsx
import { $style } from '@vapor-ui/core';

const k = 'padding';
export const C = () => <div className={$style({ [k]: '$400' })} />;
